--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
   height: 200px;
   width: 500px;
   padding:50px 50px 50px 20px ;
-  margin: 250px 500px 100px 50px ;
+  margin: 250px 500px 100px 100px ;
   position: relative;
 }
 
@@ -38,7 +38,9 @@
 
 .sub-sec-1 h1{
   color: white;
-  font-size: 50px;
+  font-size: 65px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 600;
 }
 .icon{
   font-size: 20px;
@@ -136,6 +138,7 @@ span{
   font-size: 18px;
   padding: 20px;
 }
+
 
 
 
